# pomodorotracker

./: LICENSE  README.md  my_dashboard.py  pyproject.toml  requirements.txt  setup.cfg
src/pomodorotracker/: __init__.py  cli.py  scheduler.py  streamlit_app.py
src/pomodorotracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_scheduler.py
