[metadata]
name = pomodorotracker
version = 0.1.0
description = Simple terminal Pomodoro timer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
